# daily-notes

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac
data/: Makefile.am  daily-notes.ui
po/: POTFILES.in  zh_CN.po
src/: Makefile.am  daily-notes  daily-notes.in  daily-notes.py
